--- a/01- Expanding Cards/index.html
+++ b/01- Expanding Cards/index.html
@@ -9,27 +9,27 @@
 </head>
 <body>
   <div class="container">
-    <div class="panel active" style="background-image: url('/pickle.jpeg');">
+    <div class="panel active" style="background-image: url('pickle.jpeg');">
       <h3>Pickle</h3>
       <p>Some people actually drink pickle juice as a “sports drink” — basically salty cucumber water for energy</p>
     </div>
 
-    <div class="panel" style="background-image: url('/banana.jpeg');">
+    <div class="panel" style="background-image: url('banana.jpeg');">
       <h3>Banana</h3>
       <p>Bananas are naturally radioactive… but don’t worry, you won’t glow after eating one</p>
     </div>
 
-        <div class="panel" style="background-image: url('/mango.jpeg');">
+        <div class="panel" style="background-image: url('mango.jpeg');">
       <h3>Mango</h3>
       <p>Mangoes are called the “king of fruits,” probably because they’re sticky, sweet, and demand attention</p>
     </div>
 
-        <div class="panel" style="background-image: url('/apple.jpeg');">
+        <div class="panel" style="background-image: url('apple.jpeg');">
       <h3>Apple</h3>
       <p>Apples float in water because they are 25% air — perfect for bobbing contests!</p>
     </div>
     
-        <div class="panel" style="background-image: url('/muffin.jpeg');">
+        <div class="panel" style="background-image: url('muffin.jpeg');">
       <h3>Muffin</h3>
       <p>Muffins are basically cake that got a job and put on a paper cup for work</p>
     </div>
@@ -37,4 +37,5 @@
   </div>
   <script src="script.js"></script>
 </body>
+
 </html>
